# amedia-fastapi-workshop

./: .dockerignore  .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  sample.env
api/: weather_api.py
auth/: constants.py  fake_user_db.py  password.py  user_management.py  user_token.py
infrastructure/: weather_cache.py
models/: location.py  token.py  user.py  validation_error.py
services/: openweather_service.py
templates/home/: index.html
templates/shared/: layout.html
views/: home.py
