[tool.poetry]
name = "amedia-fastapi-workshop"
version = "1.0.0"
description = "Amedia FastAPI Workshop"
authors = ["Eivind Teig <eivind.teig@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
